[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argh = "0.1.9"
async-io = "1.12.0"
env_logger = "0.10.0"
futures-lite = "1.12.0"
log = "0.4.17"
smol = "1.3.0"
